// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: none;
  border-radius: 10px;
  padding: 4px;
  box-shadow: 0 2px 8px rgba(0,0,0,.38);
}

@media screen and (min-width:32em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
/>
`;

exports[`Card renders with children 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: none;
  border-radius: 10px;
  padding: 4px;
  box-shadow: 0 2px 8px rgba(0,0,0,.38);
}

@media screen and (min-width:32em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
>
  <div />
</div>
`;
